# pneumonia-detector

./: .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dvc.yaml  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/export/: default.yaml
configs/inference/: default.yaml
configs/logger/: mlflow.yaml
configs/model/: default.yaml
configs/train/: default.yaml
configs/triton/: default.yaml
pneumonia_detection/: commands.py  datamodule.py  export_to_onnx.py  import_data.py  inference.py  model.py  onnx_to_tensorrt.py  run_triton.py  train.py  triton_setup.py
